# x18-gainer-plugin

./: CMakeLists.txt  README.md  x18-gainer.jucer
Builds/LinuxMakefile/: Makefile
JuceLibraryCode/: BinaryData.cpp  BinaryData.h  JuceHeader.h  JucePluginDefines.h
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  dial.h  x18.h
